--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -31,7 +31,10 @@ tokio-stream = "0.1"
 futures = "0.3"
 
 # Database
-rusqlite = { version = "0.32", features = ["bundled"] }
+rusqlite = { version = "0.35", features = ["bundled"] }
+sqlite-zstd = { git = "https://github.com/bedapudi6788/sqlite-zstd.git" }
+# Pin zstd versions to avoid conflicts
+zstd-sys = "=2.0.1"
 chrono = "0.4"
 async-stream = "0.3"
 
